[package]
name = "my-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "=0.8.20"  # EXACT version untuk stability
alloy-sol-types = "=0.8.20"   # EXACT version untuk stability
stylus-sdk = "=0.9.0"         # STABLE version (Jan 2026)
hex = { version = "0.4", default-features = false }
ruint = "=1.15.0"             # Lock untuk avoid conflicts

[dev-dependencies]
tokio = { version = "1", features = ["full"], default-features = false }
ethers = "2"

[features]
export-abi = ["stylus-sdk/export-abi"]
default = ["mini-alloc"]
mini-alloc = []

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"
strip = true

